another fix for toolbar items alignment (removed flex)

--- a/src/app/components/buttons/button/terra-button.component.scss
+++ b/src/app/components/buttons/button/terra-button.component.scss
@@ -317,11 +317,6 @@ fieldset[disabled] a.btn
 
 :host-context(.btn-group)
 {
-    &:nth-child(odd),
-    &:nth-child(even)
-    {
-        font-size: 0;
-    }
     &:first-child
     {
         margin-left: 0;
